# fusion

./: Anchor.toml  package-lock.json  package.json
programs/crafting/: Cargo.toml
programs/crafting/src/: errors.rs  lib.rs  token_metadata_utils.rs  token_utils.rs
programs/crafting/src/instructions/: craft.rs  create_formula.rs
tests/: craft.ts  createFormula.ts  metadata_utils.ts  types.ts  utils.ts
